# project

./: README.md
SWTEST/: 15649.py  15649_2.py
analysis_word/: Analysis_word.txt  Analysis_word_main.py  Analysis_word_sorted.txt
automessage & trade/: autotrade.py  backtest.py  backtest.xlsx  findbestk.py  slackmessege.py  upbittest.py
django/: db.sqlite3  startdjango.cmd
django/config/: settings.py  urls.py
django/polls/: admin.py  urls.py  views.py
django/polls/migrations/: 0001_initial.py
kakao_msg/: kakao_api.py  kakao_get_refres_token.py  kakao_list_meg.py  kakao_template.py  kakao_token.json  kakao_token.py
py_memo/: main.py  main.spec  memo.py  test.py
pyqt5/: btn.py  draw1.py  keyboard.py  lcd.py  lcd.spec  mouse.py  pyqt5_main.py  pyqt5_widget.py
startgit/: excelfile.py  readme.csv  test.py
startgit/node/: client.js  server.js
startgit/rest_sample/: rest_client.py  rest_server.py
startgit/server/: server.js  서버만드는법.txt
study_c/: input.c  int.c  print.c  test.c  variable.c
study_py/: class.py  dict.py  dict_sort.py  dict_test.py  list.py  print.py  print_star.py  sms.py  time.py  url.py  webcrawlling.py
study_py/package/: package.py
vscode_cmake_setting-master/vscode_cmake_setting-master/: .gitignore  CMakeLists.txt  main.cpp
vscode_cmake_setting-master/vscode_cmake_setting-master/a/: a.cpp  a.h
vscode_cmake_setting-master/vscode_cmake_setting-master/a/c/: c.cpp  c.h
vscode_cmake_setting-master/vscode_cmake_setting-master/d/: d.cpp  d.h
webcrawling/: webcrwaling.py
webpage/: webpage.html  webstart.html
(+4 files in other folders)
